Add bayes refinement

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
-[submodule "extern/thundersvm"]
+[submodule "thundersvm"]
 	path = extern/thundersvm
 	url = https://github.com/zeyiwen/thundersvm.git
+[submodule "bayesopt"]
+	path = extern/bayesopt
+	url = https://github.com/rmcantin/bayesopt.git
